heading of services changed

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   <section id="services">
     <div class="content-container container-fluid">
 
-      <h1 class="section-heading">Your One Stop Solution for Essential Medical Services</h1>
+      <h1 class="section-heading">Your One Stop Solution for Preparation Booster</h1>
       <hr>
       <div class="text-container">
         <h5 style="text-align: left;" class="inner-text">The recent epidemic has had a substantial influence on global
