--- a/physics-ch1.html
+++ b/physics-ch1.html
@@ -92,18 +92,48 @@
           <hr>
 
     </a>
+
+    <!-- question 1 -->
     <div class="question" id="q-1" style="text-align: left; margin-top: 50px;">
-      <h4><b> Q1. The total electric flux thorugh a cube of edges of 1 cm which encloses a dipole is ?</b></h4>
-      <img src="solutions\physics\1.png" class="img-fluid">
-      <div class="vid-sol" style="text-align: center;">
-        <h3 style="text-align: center;padding: 15px;"><b> Video Solution</b></h3>
+      <h3><b> Q1. The total electric flux thorugh a cube of edges of 1 cm which encloses a dipole is ?</b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\1.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/AuaJAsiYnSI" title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
 
+
     </div>
+
+    <!-- question 2 -->
+    <div class="question" id="q-2" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q1. The total electric flux thorugh a cube of edges of 1 cm which encloses a dipole is ?</b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\1.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AuaJAsiYnSI" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+
+
+
+
+
 
   </div>
 
