--- a/physics-ch1.html
+++ b/physics-ch1.html
@@ -98,7 +98,7 @@
       <h3><b> Q1. The total electric flux thorugh a cube of edges of 1 cm which encloses a dipole is ?</b></h3>
       <h3 style="text-align: center;">Image Solution</h3>
 
-      <img src="solutions\physics\1.png" class="img-fluid sol-img">
+      <img src="solutions\physics\Ch-1\1.png" class="img-fluid sol-img">
 
       <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
       <div class="iframe-container">
@@ -118,7 +118,7 @@
         </b></h3>
       <h3 style="text-align: center;">Image Solution</h3>
 
-      <img src="solutions\physics\2.png" class="img-fluid sol-img">
+      <img src="solutions\physics\Ch-1\2.png" class="img-fluid sol-img">
 
       <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
       <div class="iframe-container">
