--- a/physics-ch1.html
+++ b/physics-ch1.html
@@ -152,6 +152,165 @@
 
     </div>
 
+    <!-- question 4-->
+    <div class="question" id="q-4" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.4 An electric dipole of length 4 cm, when placed with its axis making an angle of 60∘ with a uniform
+          electric field, experiences a torque of 4√3N-m:
+          Calculate the potential energy of the dipole, if the dipole has charges of ±8uC
+          -
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\4.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VEWvR9vja6Q" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 5 -->
+    <div class="question" id="q-5" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.5 A charge "q" is placed at the centre of a cube of side l. What is the electric flux passing through
+          each face to the cube?
+
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\5.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/89AL3zx_JvE" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 6 -->
+    <div class="question" id="q-6" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.6 Consider two hollow concentric spheres, S1​ and S2​, enclosing charges 2Q and 4Q respectively as shown
+          in the figure. <br>
+          (i) Find out the ratio of the electric flux through them.
+          <br>
+          (ii) How will the electric flux through the sphere S1​ change if a medium of dielectric constant ′ϵr′ is
+          introduced in the space inside S1​ in place of air?
+
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\6.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/WQobwiWSIZI" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 7 -->
+    <div class="question" id="q-7" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q7.Consider a uniform electric field E=3×10^3 i^ NC−1.
+          <br>
+          (a) What is the flux of this field through a square of 10 cm on a side whose plane is parallel to the yz
+          plane?
+          <br>(b) What is the flux through the same square if the normal to its plane makes a 60o angle with the x-axis?
+
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\7.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/pdHnjmSp9ss" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 8 -->
+    <div class="question" id="q-8" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.8 Two identical point charges of magnitude Q are kept at a distance r from each other. A third point
+          charge q is placed on the line joining the above two charges, such that all the three charges are in
+          equilibrium. What is the sign, magnitude and position of the third charge?
+
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\8.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0mPyeVpvz_Y" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 9 -->
+    <div class="question" id="q-9" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.9 Given the electric field in the region E = 2xi, find the net electric flux through the cube and the
+          charge enclosed by it.
+
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\9.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NgEol-T9epw" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+
+
+    </div>
+
+    <!-- question 10 -->
+    <div class="question" id="q-10" style="text-align: left; margin-top: 50px;">
+      <h3><b> Q.10 In an experiment three microscopic latex spheres are, sprayed into a chamber and became charged with
+          charges +3e, +5e and -3e respectively. All the three spheres came in contact simultaneously for a moment and
+          got separated. Which one of the following are possible values for the final charge on the spheres?
+          <br>
+          <br>A +5e,-4e,+5e <br>
+          B +6e,+6e,-7e<br>
+          C +4e,+3.5,+5.5e<br>
+          D +5e,-8e,+7e<br>
+        </b></h3>
+      <h3 style="text-align: center;">Image Solution</h3>
+
+      <img src="solutions\physics\Ch-1\10.png" class="img-fluid sol-img">
+
+      <h3 style="text-align: center;padding: 15px;"> Video Solution</h3>
+      <div class="iframe-container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VsUzX76noKc" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+
+
+      </div>
 
 
 
@@ -159,7 +318,11 @@
 
 
 
-  </div>
+
+
+
+
+    </div>
 
 
 
